--- a/helpful-links/main/default/lwc/jsconfig.json
+++ b/helpful-links/main/default/lwc/jsconfig.json
@@ -3,7 +3,7 @@
         "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
-            "c/helpful-links": [
+            "c/helpfulLinks": [
                 "helpfulLinks/helpfulLinks.js"
             ]
         }
@@ -11,5 +11,10 @@
     "include": [
         "**/*",
         "../../../../.sfdx/typings/lwc/**/*.d.ts"
-    ]
+    ],
+    "typeAcquisition": {
+        "include": [
+            "jest"
+        ]
+    }
 }
