Updated package naming

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sfdc-helpfullinks",
+  "name": "helpful-links-component",
   "version": "1.0.0",
   "description": "A Salesforce Lightning Component that allows users to show useful links for users on Lightning pages",
   "main": "index.js",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Clint-Chester/sfdc-helpfullinks.git"
+    "url": "git+https://github.com/Clint-Chester/helpful-links-component.git"
   },
   "author": "Clint Chester",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Clint-Chester/sfdc-helpfullinks/issues"
+    "url": "https://github.com/Clint-Chester/helpful-links-component/issues"
   },
-  "homepage": "https://github.com/Clint-Chester/sfdc-helpfullinks#readme",
+  "homepage": "https://github.com/Clint-Chester/helpful-links-component#readme",
   "devDependencies": {
     "@salesforce/lwc-jest": "^0.4.12"
   }
