Component compatible with Lightning Communities

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,8 +1,3 @@
 {
-    "edition": "Enterprise",
-    "hasSampleData": "true",
-    "orgPreferences": {
-      "enabled": ["S1DesktopEnabled", "ChatterEnabled"],
-      "disabled": ["IsNameSuffixEnabled"]
-    }
+    "edition": "Developer"
   }
